backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dockerhub.2.8.3.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.dockerhub.2.8.3.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/magicbean-compose-pipeline-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: MAGICBEAN_VERSION
              value: ${MAGICBEAN_VERSION}
            - name: MB_CORS_ALLOWED_ORIGINS
              value: ${MB_CORS_ALLOWED_ORIGINS}
            - name: MB_HIVE_THRIFT_PASSWORD
              value: ${MAGICBEAN_POSTGRES_PASSWORD}
            - name: MB_HIVE_THRIFT_USERNAME
              value: ${MAGICBEAN_POSTGRES_USER}
            - name: MB_INTERNET_URI
              value: ${OKTA_MB_INTERNET_URI}
            - name: MB_POSTGRES_PWD
              value: ${MAGICBEAN_POSTGRES_PASSWORD}
            - name: MB_POSTGRES_USER
              value: ${MAGICBEAN_POSTGRES_USER}
            - name: MB_SSO_OKTA_CLIENT_ID
              value: ${OKTA_MB_SSO_OKTA_CLIENT_ID}
            - name: MB_SSO_OKTA_CLIENT_NAME
              value: ${OKTA_MB_SSO_OKTA_CLIENT_NAME}
            - name: MB_SSO_OKTA_CLIENT_SECRET
              value: ${OKTA_MB_SSO_OKTA_CLIENT_SECRET}
            - name: MB_SSO_OKTA_DOMAIN
              value: ${OKTA_MB_SSO_OKTA_DOMAIN}
          image: magicbeaninc/magicbeaninc_backend:${MAGICBEAN_VERSION}
          name: backend
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
