magicbean-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: magicbean-backend
  name: magicbean-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: magicbean-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/magicbean-compose-pipeline-network: "true"
        io.kompose.service: magicbean-backend
    spec:
      containers:
        - env:
          image: magicbeaninc/magicbeaninc_backend:2.8.3
          name: magicbean-backend
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
