magicbean-hive-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dockerhub.2.8.3.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: magicbean-hive-db
  name: magicbean-hive-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: magicbean-hive-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.dockerhub.2.8.3.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/magicbean-compose-pipeline-network: "true"
        io.kompose.service: magicbean-hive-db
    spec:
      containers:
        - args:
            - postgres
            - -c
            - listen_addresses=*
          image: magicbeaninc/magicbeaninc_hive_db:2.7.12
          name: magicbean-hive-db
          resources: {}
      restartPolicy: Always
status: {}
