backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backend
  name: backend
spec:
  type: ClusterIP
  ports:
    - name: "9010"
      port: 9010
      targetPort: 9010
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
