db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: db-svc
  name: db-svc
spec:
  type: ClusterIP
  ports:
    - name: "db-port"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
