pipeline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline
spec:
  type: ClusterIP
  ports:
  - name: pipeline
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: pipeline
