rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: ClusterIP
  ports:
  - name: rabbitmq
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: rabbitmq
