magicbean-compose-pipeline-network-networkpolicy.yaml
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  creationTimestamp: null
#  name: magicbean-compose-pipeline-network
#spec:
#  ingress:
#    - from:
#        - podSelector:
#            matchLabels:
#              io.kompose.network/magicbean-compose-pipeline-network: "true"
#        - podSelector: {}
#  podSelector:
#    matchLabels:
#      io.kompose.network/magicbean-compose-pipeline-network: "true"

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: magicbean-compose-pipeline-network
spec:
  podSelector:
    matchLabels:
      io.kompose.network/magicbean-compose-pipeline-network: "true"
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
